Cleanup the repository

--- a/Syllabus/COM_451_Fall_2017_Syllabus.tex
+++ b/Syllabus/COM_451_Fall_2017_Syllabus.tex
@@ -79,7 +79,6 @@
             \item Threading with \textit{pthreads}
             \item Synchronization
             \item Data-parallelism with SIMD instructions
-            \item GPGU programming with \textit{OpenCL} and \textit{CUDA}
             \item Distributed programming with \textit{OpenMPI}
         \end{itemize}
 
@@ -90,13 +89,13 @@
 
     \section{Course Projects}
 
-        Throughout the course, students will have to work on three major
-        projects to accelerate programs for image processing, astronomy
-        simulation, and rendering through ray marching.
+        Throughout the course, students will have to work on two major
+        projects to accelerate programs for image processing and astronomy
+        simulation.
 
     \section{Reading}
 
-        An Introduction to Parallel Programming by by Peter Pacheco (ISBN:
+        An Introduction to Parallel Programming by Peter Pacheco (ISBN:
         978-0123742605)
 
     \section{Grading}
