--- a/Syllabus/COM_451_Fall_2017_Syllabus.tex
+++ b/Syllabus/COM_451_Fall_2017_Syllabus.tex
@@ -22,7 +22,7 @@
     \title{COM 451, Parallel and Distributed Programming}
     \author{
         American University of Central Asia\\
-        Department of Software Engineering
+        Software Engineering Program
     }
     \date{}
     \maketitle
@@ -71,32 +71,79 @@
         The course introduces students to the topic of programming multi-core
         multi-processor systems with data-parallel facilities of various
         hardware on a single machine or in a distributed system connected to a
-        high-performance network.
+        high-performance network. The students will learn the most popular
+        shared-memory parallel programming API such as Pthreads and a
+        distributed memory programming API such as MPICH. Students will get a
+        chance to work on two projects accelerating image processing tasks and
+        astronomy simulations. Results of the projects will be tested together
+        with students on high-performance parallel machines on the Amazon's
+        cloud.
 
     \section{Topics Covered}
 
         \begin{itemize}
-            \item Threading with \textit{pthreads}
-            \item Synchronization
-            \item Data-parallelism with SIMD instructions
-            \item Distributed programming with \textit{OpenMPI}
+        \item Flynn's taxonomy
+        \item Amdahl’s law
+        \item CPU caches and locality
+        \item CPU pipelines and branch prediction
+        \item Hardware multithreading
+        \item Shared and distributed memory systems
+        \item NUMA and UMA architectures
+        \item Data-parallelism with SIMD instructions
+        \item General-purpose computing on graphics processing units
+        \item Synchronization
+        \begin{itemize}
+          \item Spinlocks, barriers, mutexes, semaphores
+          \item Conditional variables
+          \item Race conditions
+          \item Deadlocks
+        \end{itemize}
         \end{itemize}
 
     \section{Examinations}
 
         Students will get midterm and final examinations in the form of two
-        quizzes with multiple choice questions.
+        quizzes with multiple choice or open questions. Exam samples can be
+        found on the official course repository.
 
     \section{Course Projects}
 
-        Throughout the course, students will have to work on two major
-        projects to accelerate programs for image processing and astronomy
-        simulation.
+        Throughout the course, students will work on two major projects to
+        accelerate programs performing image processing tasks and astronomy
+        simulations.
+
+        \subsection{Project \#1}
+
+            In the first projects, students will be asked to accelerate a Sobel
+            and Median filters in an image-processing program by utilizing all
+            the cores of a test machine through the Pthread API. They may also
+            accelerate their solutions even further by utilizing the parallel
+            vector-processing facilities such as SIMD instructions of modern
+            CPUs. For extra points, students may move the image processing
+            algorithms to the GPU and compare the achieved speed up.
+
+        \subsection{Project \#2}
+
+            The second project requires accelerating the N-body simulation in a
+            distributed environment with a high-speed interconnection between
+            machines through the Message Passing Interface. Students will
+            compete on how many planetary bodies can their accelerated systems
+            handle compared to others.
 
     \section{Reading}
 
         An Introduction to Parallel Programming by Peter Pacheco (ISBN:
         978-0123742605)
+
+        \subsection{Supplemental Reading}
+
+            \begin{enumerate}
+                \item Parallel Programming, 2nd Edition by Thomas Rauber and
+                Gudula Rünger (ISBN: 978-3642048173)
+                \item Computer Architecture: A Quantitative Approach, 5th
+                Edition by David Patterson and John L. Hennessy (ISBN:
+                978-0123838728)
+            \end{enumerate}
 
     \section{Grading}
 
